# bayesian-playground

./: README.md  pyproject.toml
notebooks/pymc/: bayesian_glm.ipynb  causal_pymc.ipynb  data_container.ipynb  pymc_basic.ipynb  scipy_stats_fit.ipynb
